[tool.poetry]
name = "image_gen"
version = "0.1.0"
description = ""
authors = ["Christopher Sutton"]

[tool.poetry.scripts]
start = "image_gen.main:start"

[tool.poetry.dependencies]
python = "^3.7,<3.10"
imutils = "^0.5.4"
numpy = "^1.21.2"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
