[tool.poetry]
name = "web-interface"
version = "0.1.0"
description = ""
authors = ["Christopher Michael Sutton <christopher.sutton12@gmail.com>"]

[tool.poetry.scripts]
start = "web_interface.main:start"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
opencv-python = "^4.5.3"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
