[tool.poetry]
name = "web-interface"
version = "0.1.0"
description = ""
authors = ["Christopher Michael Sutton <christopher.sutton12@gmail.com>"]

[tool.poetry.scripts]
start = "web_interface.main:start"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
Jinja2 = "^3.0.1"
websockets = "^10.0"
aioredis = "^2.0.0"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
